Desktop UI fixes and improvements: Add feather icons, fix alignment of control elements, add styles for cleaner display.

--- a/static/styles/frontpage.css
+++ b/static/styles/frontpage.css
@@ -143,3 +143,21 @@ html, body{
   100% { background-color: #B20000; box-shadow: 0 0 3px #B20000; }
 }
 
+.controls {
+  align-items: center;
+}
+
+.controls .btn {
+  width: 100%;
+  padding: .375rem .125rem;
+}
+
+.controls label {
+  width: 100%;
+  margin-bottom: auto;
+  text-align: right;
+}
+
+#pauseButton {
+	color: #fff;
+}
